welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.error
parotTrouble:2: error: type mismatch;
 found   : Int(7)
 required: Boolean
  if (talking==true && 0<=hour<=7 || talking==true && 20<=hour<=0) {
                                ^parotTrouble:2: error: type mismatch;
 found   : Int(0)
 required: Boolean
  if (talking==true && 0<=hour<=7 || talking==true && 20<=hour<=0) {
                                                                ^