welcome.lessons.welcome.bat.bool1.ParotTrouble.scala.code
def parotTrouble(talking:Boolean, hour:Int):Boolean = {
  if (talking==true && 0<=hour<=7 || talking==true && 20<=hour<=0) {
    return true
  } else {
    return false
  }
}